--- a/GraficaGGS 2/Formulario.html
+++ b/GraficaGGS 2/Formulario.html
@@ -63,7 +63,7 @@
           </div>
 
           <fieldset>
-            <legend><span class="number">1</span>Tipo de Receituário</legend>
+            <legend><span class="number"></span>Tipo de Receituário</legend>
             <div class="radioDiv">
               <label>
                 <input type="radio" name="receituario" value="retinoides" /> Retinóides
@@ -81,7 +81,7 @@
           </fieldset>
 
           <fieldset>
-            <legend><span class="number">2</span>Informações</legend>
+            <legend><span class="number"></span>Informações</legend>
             <div class="form-group">
               <div id="pfFields">
                 <!-- Campos Pessoa Física -->
@@ -206,7 +206,7 @@
           </fieldset>
 
           <fieldset>
-            <legend><span class="number">3</span>Quantidade e preço</legend>
+            <legend><span class="number"></span>Quantidade e preço</legend>
             <div class="input-group">
               <label for="qtd">Quantidade (blocos)</label>
               <select name="qtd" id="qtd" required>
@@ -271,3 +271,4 @@
     <script src="js/main.js"></script>
   </body>
 </html>
+
